--- a/contactus.html
+++ b/contactus.html
@@ -51,7 +51,7 @@
                     <h3><i class="fas fa-print"></i> Quick Order Form</h3>
                     <p>Tell us what you need printed!</p>
                     
-                    <form class="simple-form" id="orderForm" action="mailto:motloungnthabiseng421@gmail.com" method="POST" enctype="text/plain">
+                    <form class="simple-form" id="orderForm" action="mailto:madzenatsiko7@gmail.com" method="POST" enctype="text/plain">
                         <div class="form-group">
                             <label for="fullName">Your Name *</label>
                             <input type="text" id="fullName" name="fullName" required>
@@ -141,4 +141,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
