--- a/contactus.html
+++ b/contactus.html
@@ -43,7 +43,7 @@
                     <div class="contact-card">
                         <i class="fas fa-envelope"></i>
                         <h3>Email</h3>
-                        <p>Motloungnthabiseng421@gmail.com</p>
+                        <p>Madzenatsiko7@gmail.com</p>
                     </div>
                 </div>
 
@@ -143,4 +143,5 @@
 </body>
 
 </html>
+
 
